--- a/app/views/shared/_hidden_menu.html.haml
+++ b/app/views/shared/_hidden_menu.html.haml
@@ -1,16 +1,21 @@
-.user
-  - if user_signed_in?
-    Logged in as:
-    = link_to current_user.name, user_path(current_user)
-.nav
+%nav
+  = link_to user_path(current_user) do
+    %i.icon-user-1
+    = truncate(current_user.name || current_user.email, length: 10)
+  = link_to destroy_user_session_path, method: :delete do
+    %i.icon-logout
+    Log out
+%nav
   = link_to new_estimate_path do
     %i.icon-doc-new
     New project
+  = link_to new_project_type_path do
+    %i.icon-doc-new
+    New templete
+  = link_to estimates_path do
+    %i.icon-menu
+    Browse
   = link_to settings_path do
     %i.icon-cog-1
     Settings
-  - if user_signed_in?
-    = link_to  "Log out", destroy_user_session_path, method: :delete
-  - else
-    = link_to "Sign in", new_user_session_path
-    = link_to "Register", new_user_registration_path
+
