Add user authorization with cancan

--- a/app/views/estimates/index.html.haml
+++ b/app/views/estimates/index.html.haml
@@ -1,6 +1,6 @@
 %h1 Projects
 
-- @estimates.each do |e|
+- current_user.estimates.each do |e|
   = link_to e, class: "wide-btn" do
     = e.project
     %span= truncate(e.description, length: 80)
