--- a/app/views/estimates/show.html.haml
+++ b/app/views/estimates/show.html.haml
@@ -50,7 +50,7 @@
     %span TODO
   // TODO: Add total time
 - else
-  %p This project type has no tasks. You should create some, tasks are awesome. Just press the leftest one of the three nifty icons below.
+  %p This project type has no tasks. You should create some, tasks are awesome. Just press the leftest one of the nifty icons below.
 
 .project-icons
   = link_to content_tag(:i, nil, class: "icon-doc-new"), new_estimate_task_path(@estimate), title: "Create a new task for this project"
