--- a/app/views/estimates/show.html.haml
+++ b/app/views/estimates/show.html.haml
@@ -24,7 +24,7 @@
           %td= truncate(t.name, length: 18)
           %td.rate= t.rate
           %td.symbol x
-          %td.hours= unless t.tasks.empty? then t.tasks.sum{|sub| if sub.hours then sub.hours else 0 end} else t.hours end
+          %td.hours= t.hours
           %td.symbol =
           %td.fee= unless t.tasks.empty? or t.rate.nil? then t.tasks.sum{|sub| if sub.hours then sub.hours else 0 end} * t.rate else unless t.rate.nil? or t.hours.nil? then t.rate * t.hours end end
           %td
@@ -47,8 +47,8 @@
 
   %p.total
     Total fee:
-    %span TODO
-  // TODO: Add total time
+    %span= @total
+
 - else
   %p This project type has no tasks. You should create some, tasks are awesome. Just press the leftest one of the nifty icons below.
 
@@ -56,3 +56,5 @@
   = link_to content_tag(:i, nil, class: "icon-doc-new"), new_estimate_task_path(@estimate), title: "Create a new task for this project"
   = link_to content_tag(:i, nil, class: "icon-edit"), edit_estimate_path, title: "Edit project title or description"
   = link_to content_tag(:i, nil, class: "icon-trash"), @estimate, method: :delete, data: { confirm: "Wait, really? This project is awesome. Sure you want to delete?" }, class: "delete-icon", title: "Delete this project"
+
+= render partial: "notes"
