--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,9 +1,14 @@
 %h1
   %span User:
   = @user.name || @user.email
+%p= image_tag avatar_url(current_user), class: "avatar"
 
 - unless @templates.empty?
   %h2 Public templates
   - @templates.each do |t|
     %span.tag
       = link_to t.name, t
+
+%p A top notch user to say the least.
+
+%p= link_to "Edit profile", edit_user_registration_path, class: "btn inline"
