--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,23 +1,16 @@
-%h2 Edit #{resource_name.to_s.humanize}
+%h1
+  %span= resource_name.to_s.humanize
+  Edit
 
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
   = devise_error_messages!
-  = f.label :name
-  = f.text_field :name
+  = f.text_field :name, placeholder: "Display name"
+  = f.email_field :email, placeholder: "Email"
+  = f.password_field :password, autocomplete: "off", placeholder: "New password"
+  = f.password_field :password_confirmation, placeholder: "Confirm password"
+  = f.password_field :current_password, placeholder: "Current password"
+  = f.submit "Update user"
 
-  = f.label :email
-  = f.email_field :email
-
-  = f.label :password
-  %i (leave blank if you don't want to change it)
-  = f.password_field :password, :autocomplete => "off"
-
-  = f.label :password_confirmation
-  = f.password_field :password_confirmation
-
-  = f.label :current_password
-  %i (we need your current password to confirm your changes)
-  = f.password_field :current_password
-  = f.submit "Update"
-
-%p Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete}
+= link_to registration_path(resource_name), :data => { :confirm => "Are you sure you want to cancel your account?" }, :method => :delete, class: "delete-icon" do
+  %i.icon-trash
+  Cancel my account
