--- a/app/views/estimates/edit.html.haml
+++ b/app/views/estimates/edit.html.haml
@@ -2,4 +2,5 @@
 = form_for(@estimate) do |e|
   = e.text_field :project, :placeholder => "Project name"
   = e.text_area :description, :placeholder => "Description"
+  = text_field_tag :editor, nil, placeholder: "Give access to user (email)"
   = e.submit
