--- a/app/views/tasks/_new_child_task_form.html.haml
+++ b/app/views/tasks/_new_child_task_form.html.haml
@@ -1,4 +1,5 @@
 = form_for @task, :url => child_tasks_path(@parent) do |f|
   = f.text_field :name, :placeholder => "Name for task"
   = f.text_field :hours, :placeholder => "Estimated number of hours to complete task"
+  = f.hidden_field :parent_id, value: @parent.id
   = f.submit
