--- a/app/views/tasks/_new_project_type_task_form.html.haml
+++ b/app/views/tasks/_new_project_type_task_form.html.haml
@@ -1,3 +1,4 @@
 = form_for @task, :url => project_type_tasks_path(params[:project_type_id]) do |f|
   = f.text_field :name, :placeholder => "Name for task"
+  = f.hidden_field :project_type_id, value: params[:project_type_id]
   = f.submit
