Darken blues slightly

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,9 +1,9 @@
 @import 'normalize.css';
 @import 'icons.css';
 
-$darker-blue: #0077B0;
-$dark-blue: #0087C0;
-$blue: #00A7E0;
+$darker-blue: #005790; //#0077B0;
+$dark-blue: #0067A0; //#0087C0;
+$blue: #0087C0; //#00A7E0;
 $light-blue: #6EDCFF;
 $lighter-blue: #BEF;
 $button-blue: #00BEFF;
