--- a/app/views/estimates/show.html.haml
+++ b/app/views/estimates/show.html.haml
@@ -33,9 +33,9 @@
               - unless t.rate.nil? or t.hours.nil?
                 = t.rate * t.hours
           %td
-            = link_to content_tag(:i, nil, :class => "icon-flow-split"), new_child_task_path(t)
-            = link_to content_tag(:i, nil, :class => "icon-edit"), edit_estimate_task_path(@estimate, t)
-            = link_to content_tag(:i, nil, :class => "icon-cancel"), estimate_task_path(@estimate, t), :method => :delete, class: "delete-icon"
+            = link_to content_tag(:i, nil, class: "icon-flow-split"), new_child_task_path(t)
+            = link_to content_tag(:i, nil, class: "icon-edit"), edit_estimate_task_path(@estimate, t)
+            = link_to content_tag(:i, nil, class: "icon-cancel"), estimate_task_path(@estimate, t), :method => :delete, class: "delete-icon", title: "Delete this task"
         - unless t.tasks.empty?
           - t.tasks.each do |sub|
             %tr.sub-task
@@ -47,8 +47,8 @@
               %td
               %td.fee= unless sub.parent.rate.nil? or sub.hours.nil? then sub.parent.rate * sub.hours end
               %td
-                = link_to content_tag(:i, nil, :class => "icon-edit"), edit_child_task_path(t, sub)
-                = link_to content_tag(:i, nil, :class => "icon-cancel"), estimate_task_path(@estimate, sub), :method => :delete, class: "delete-icon"
+                = link_to content_tag(:i, nil, class: "icon-edit"), edit_child_task_path(t, sub)
+                = link_to content_tag(:i, nil, class: "icon-cancel"), estimate_task_path(@estimate, sub), method: :delete, class: "delete-icon", title: "Delete this task"
 
   %p.total
     Total fee:
