--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -394,7 +394,10 @@ table {
   font-size: 2em;
 }
 
-img.avatar { border: 5px solid white; }
+img.avatar { 
+  max-width: 10em;
+  border: 5px solid white;
+}
 
 a.delete-icon:hover { color: #F44; }
 
